# quixote-cipher

./: .gitignore  .gitmodules  CMakeLists.txt  CypherReader.cc  CypherReader.h  Main.cc  README.md  TagGrammarFinder.cc  TagGrammarFinder.h  quicktest.cc  tmp.cc
Ciphers/: corpus.spanish.quixote.written_very_short.txt
Cyphers/: corpus.spanish.quixote.written_short.txt  corpus.spanish.quixote.written_very_short.txt  eng.cypher.short.txt
EMViterbiPackage/: BasicHelper.cc  BasicHelper.h  Notation.cc  Notation.h  NotationConstants.h  TrellisAid.cc  TrellisAid.h
GeneratedData/: bigram_data.txt  bigram_data.txtman  eng-output-10-iters.txt  eng-output-20-iters.txt  eng-output-50-iters.txt  output-20-iters.txt  spanish-long-seq-output-20-iters.txt  spanish-short-seq-output-20-iters.txt  spanish-short-seq-output-30-iters.txt
GivenCounts/: corpus.spanish.quixote.written  corpus.spanish.quixote.written_short.txt  corpus.spanish.sound_bigrams  corpus.spanish.trigrams.txt
LanguageModels/: corpus.spanish.sound_bigrams.txt  corpus.spanish.trigrams.txt  eng.bigram.counts.txt
